--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=News+Cycle&display=swap" rel="stylesheet">
     <title>Curriculum vitae</title>
   </head>
   <body>
-    <article class="myname">
-      <h1>Kristina Piliponchik</h1>
-      <figure class="myphoto">
-        <img src="img/CVphoto.jpg" alt="CvPhoto">
-      </figure>
+        <header>
+                <h1>Curriculum vitae</h1>
+                <h2>Kristina Piliponchik</h2>
+            </header>
+            <main>
+                <figure class="myphoto">
+                    <img src="img/PhotoCV.jpg" alt="CvPhoto">
+                 </figure>
+<section class="Contacts">
       <ul>
-        Contacts:
+        <h3>Contacts:</h3>
         <li class ="email">Email - [piliponchik@gmail.com](piliponchik@gmail.com)</li>
         <li class = "phone"> Phone number/Telegram - +375(33) 3311796</li>
         <li class = "disc"> Discord: piliposha(@piliposha)</li>
     </ul>
+</section>
+<section class="aboutMe">
+        <h2>About me</h2>
     <p> My main aim in RS School is to get as much experience in front-end development as possible. 
         On the 1-th year of studying in Economic University I found programming very interesting. 
         Much more interesting, than economics! So I started exploring this sphere and decided, that 
@@ -28,17 +35,21 @@
         a true and serious web-developer, who is always in trend and knows all the innovations in the 
         world of web-development.
     </p>
+</section>
+<section class="skillsAndLang">
     <ul>
-        Skills:
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JS</li>
+        <h3>Skills: </h3>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
     </ul>
-    <ul>
-        English:
-        <li>Intermediate</li>
-    </ul>
-            <script src="" async defer></script>
-     </article>
-  </body>
+        <ul>
+            <h3>English:</h3>
+            <li>Intermediate</li>
+        </ul>
+
+</section>
+        <script src="" async defer></script>
+</main>
+       </body>
 </html>
