--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="">
     <link href="https://fonts.googleapis.com/css?family=News+Cycle&display=swap" rel="stylesheet">
     <title>Curriculum vitae</title>
   </head>
@@ -21,7 +20,7 @@
 <section class="Contacts">
       <ul>
         <h3>Contacts:</h3>
-        <li class ="email">Email - [piliponchik@gmail.com](piliponchik@gmail.com)</li>
+        <li class ="email">Email - piliponchik@gmail.com</li>
         <li class = "phone"> Phone number/Telegram - +375(33) 3311796</li>
         <li class = "disc"> Discord: piliposha(@piliposha)</li>
     </ul>
